--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "scripts": {
         "start": "nodemon ./src/server/index.ts",
         "test:unit": "jest",
-        "test:e2e": "node_modules/.bin/hermione",
-        "test:e2e:gui": "node_modules/.bin/hermione gui",
+        "test:e2e": ".\\node_modules\\.bin\\hermione",
+        "test:e2e:gui": ".\\node_modules\\.bin\\hermione gui",
         "test": "npm run test:unit && npm run test:e2e",
         "build": "webpack --mode=production --node-env=production",
         "watch": "webpack --watch"
     },
     "dependencies": {
         "@bem-react/classname": "^1.5.12",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^12.1.5",
         "axios": "^0.23.0",
         "bootstrap": "^5.1.3",
@@ -19,6 +20,7 @@
         "faker": "^5.5.3",
         "html-reporter": "^9.7.1",
         "immer": "^9.0.6",
+        "jest-dom": "^4.0.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -50,6 +52,7 @@
         "jest-environment-jsdom": "^29.3.1",
         "mini-css-extract-plugin": "^2.4.2",
         "nodemon": "^2.0.13",
+        "redux-mock-store": "^1.5.4",
         "sass": "^1.42.1",
         "sass-loader": "^12.1.0",
         "style-loader": "^3.3.0",
